{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 51,
  "lineage": "31c2250a-589f-d41a-9e55-f7e8ed29cc1c",
  "resources": [
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/backend-alb/a5e74f2d9059b87b",
            "arn_suffix": "app/backend-alb/a5e74f2d9059b87b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-33596217.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/backend-alb/a5e74f2d9059b87b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d84de97d426c2b20"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050b44abfde264704"
              },
              {
                "subnet_id": "subnet-05aa53e75601efcb5"
              }
            ],
            "subnets": [
              "subnet-050b44abfde264704",
              "subnet-05aa53e75601efcb5"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Name": "backend-alb"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/backend-alb/a5e74f2d9059b87b"
          },
          "dependencies": [
            "module.backend_alb.aws_lb_target_group.back_end",
            "module.vpc.aws_security_group.alb_backend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:listener/app/backend-alb/a5e74f2d9059b87b/ceee13a8c84e22d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/backend-tg/9808344413544e42",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878915883792:listener/app/backend-alb/a5e74f2d9059b87b/ceee13a8c84e22d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/backend-alb/a5e74f2d9059b87b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:listener/app/backend-alb/a5e74f2d9059b87b/ceee13a8c84e22d2"
          },
          "dependencies": [
            "module.backend_alb.aws_lb.back_end",
            "module.backend_alb.aws_lb_target_group.back_end",
            "module.vpc.aws_security_group.alb_backend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.backend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "module.backend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/backend-tg/9808344413544e42",
            "arn_suffix": "targetgroup/backend-tg/9808344413544e42",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/backend-tg/9808344413544e42",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/backend-alb/a5e74f2d9059b87b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/backend-tg/9808344413544e42"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastionhost",
      "provider": "module.bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa3fe0fa7920f68e",
            "arn": "arn:aws:ec2:us-east-1:878915883792:instance/i-0676ff80184b16d67",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0676ff80184b16d67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0eeb76fa91be3719c"
              }
            ],
            "primary_network_interface_id": "eni-0eeb76fa91be3719c",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-3-235-235-181.compute-1.amazonaws.com",
            "public_ip": "3.235.235.181",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c234988248e71dbb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050b44abfde264704",
            "tags": {
              "Name": "prod-bastion-host"
            },
            "tags_all": {
              "Name": "prod-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0436c08e7852c9ff5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "i-0676ff80184b16d67",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_host",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/frontend-alb/4de5dc8ce8b76bf1",
            "arn_suffix": "app/frontend-alb/4de5dc8ce8b76bf1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-882394145.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/frontend-alb/4de5dc8ce8b76bf1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d3b8a2779d8f7070"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-050b44abfde264704"
              },
              {
                "subnet_id": "subnet-05aa53e75601efcb5"
              }
            ],
            "subnets": [
              "subnet-050b44abfde264704",
              "subnet-05aa53e75601efcb5"
            ],
            "tags": {
              "Name": "frontend-alb"
            },
            "tags_all": {
              "Name": "frontend-alb"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/frontend-alb/4de5dc8ce8b76bf1"
          },
          "dependencies": [
            "module.frontend_alb.aws_lb_target_group.front_end",
            "module.vpc.aws_security_group.alb_frontend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_http",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:listener/app/frontend-alb/4de5dc8ce8b76bf1/8f049f6dafeeb667",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/frontend-tg/62269da46091e49e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878915883792:listener/app/frontend-alb/4de5dc8ce8b76bf1/8f049f6dafeeb667",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/frontend-alb/4de5dc8ce8b76bf1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:listener/app/frontend-alb/4de5dc8ce8b76bf1/8f049f6dafeeb667"
          },
          "dependencies": [
            "module.frontend_alb.aws_lb.front_end",
            "module.frontend_alb.aws_lb_target_group.front_end",
            "module.vpc.aws_security_group.alb_frontend",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "module.frontend_alb.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/frontend-tg/62269da46091e49e",
            "arn_suffix": "targetgroup/frontend-tg/62269da46091e49e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/frontend-tg/62269da46091e49e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:878915883792:loadbalancer/app/frontend-alb/4de5dc8ce8b76bf1"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878915883792:targetgroup/frontend-tg/62269da46091e49e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f984987a9b7add2",
            "arn": "arn:aws:ec2:us-east-1:878915883792:elastic-ip/eipalloc-03f984987a9b7add2",
            "association_id": "eipassoc-08357024ff43cf7e1",
            "domain": "vpc",
            "id": "eipalloc-03f984987a9b7add2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05fd78d69cc2068ea",
            "private_dns": "ip-10-0-1-32.ec2.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-44-194-193-48.compute-1.amazonaws.com",
            "public_ip": "44.194.193.48",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:internet-gateway/igw-06215cbc673f44a09",
            "id": "igw-06215cbc673f44a09",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f984987a9b7add2",
            "association_id": "eipassoc-08357024ff43cf7e1",
            "connectivity_type": "public",
            "id": "nat-0742752b32667211e",
            "network_interface_id": "eni-05fd78d69cc2068ea",
            "private_ip": "10.0.1.32",
            "public_ip": "44.194.193.48",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-050b44abfde264704",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:route-table/rtb-0d96bf248762a53ac",
            "id": "rtb-0d96bf248762a53ac",
            "owner_id": "878915883792",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0742752b32667211e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-private-rt"
            },
            "tags_all": {
              "Name": "prod-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "rtb-0d96bf248762a53ac",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:route-table/rtb-0637ae446d98f8fd3",
            "id": "rtb-0637ae446d98f8fd3",
            "owner_id": "878915883792",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06215cbc673f44a09",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-rt"
            },
            "tags_all": {
              "Name": "prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "rtb-0637ae446d98f8fd3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3b76c8968afa04d",
            "region": "us-east-1",
            "route_table_id": "rtb-0d96bf248762a53ac",
            "subnet_id": "subnet-0a22c1ab0af104bd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02949ea9270adc967",
            "region": "us-east-1",
            "route_table_id": "rtb-0d96bf248762a53ac",
            "subnet_id": "subnet-0fdbfadbf2928712e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a016a7ffd72e975",
            "region": "us-east-1",
            "route_table_id": "rtb-0d96bf248762a53ac",
            "subnet_id": "subnet-0ca58559c9a303601"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "database-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05df88b1180ec9771",
            "region": "us-east-1",
            "route_table_id": "rtb-0d96bf248762a53ac",
            "subnet_id": "subnet-07b93cb7f6da423e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfdf9edab29c18c7",
            "region": "us-east-1",
            "route_table_id": "rtb-0d96bf248762a53ac",
            "subnet_id": "subnet-09b77023568f37e80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "web-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02491027e14a16464",
            "region": "us-east-1",
            "route_table_id": "rtb-0d96bf248762a53ac",
            "subnet_id": "subnet-0d843f2538e9fce7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.prvt3",
            "module.vpc.aws_subnet.prvt4",
            "module.vpc.aws_subnet.prvt5",
            "module.vpc.aws_subnet.prvt6",
            "module.vpc.aws_subnet.prvt7",
            "module.vpc.aws_subnet.prvt8",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a0abf31ff410ea7",
            "region": "us-east-1",
            "route_table_id": "rtb-0637ae446d98f8fd3",
            "subnet_id": "subnet-050b44abfde264704"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        },
        {
          "index_key": "pub2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4f078c0c0085378",
            "region": "us-east-1",
            "route_table_id": "rtb-0637ae446d98f8fd3",
            "subnet_id": "subnet-05aa53e75601efcb5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.pub1",
            "module.vpc.aws_subnet.pub2",
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_backend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:security-group/sg-0d84de97d426c2b20",
            "description": "Allow HTTP/HTTPS for backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d84de97d426c2b20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-alb-backend-sg"
            },
            "tags_all": {
              "Name": "prod-alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "sg-0d84de97d426c2b20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_frontend",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:security-group/sg-0d3b8a2779d8f7070",
            "description": "Allow HTTP/HTTPS from public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3b8a2779d8f7070",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP/HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-alb-frontend-sg"
            },
            "tags_all": {
              "Name": "prod-alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "sg-0d3b8a2779d8f7070",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:security-group/sg-082ff39a22cf75670",
            "description": "Allow SSH + HTTP for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082ff39a22cf75670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-backend-server-sg"
            },
            "tags_all": {
              "Name": "prod-backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "sg-082ff39a22cf75670",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:security-group/sg-0436c08e7852c9ff5",
            "description": "Allow SSH from allowed CIDRs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0436c08e7852c9ff5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-host-sg",
            "name_prefix": "",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-bastion-host-sg"
            },
            "tags_all": {
              "Name": "prod-bastion-host-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "sg-0436c08e7852c9ff5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:security-group/sg-0952a9b5f67a2e752",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0952a9b5f67a2e752",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-database-sg"
            },
            "tags_all": {
              "Name": "prod-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "sg-0952a9b5f67a2e752",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_server",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:security-group/sg-05277bffafb6489aa",
            "description": "Allow SSH + HTTP for frontend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05277bffafb6489aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH/HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-frontend-server-sg"
            },
            "tags_all": {
              "Name": "prod-frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "sg-05277bffafb6489aa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt3",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-09b77023568f37e80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b77023568f37e80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-private-web-1"
            },
            "tags_all": {
              "Name": "prod-private-web-1"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-09b77023568f37e80",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt4",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-0d843f2538e9fce7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d843f2538e9fce7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-private-web-2"
            },
            "tags_all": {
              "Name": "prod-private-web-2"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-0d843f2538e9fce7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt5",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-0a22c1ab0af104bd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a22c1ab0af104bd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-private-app-1"
            },
            "tags_all": {
              "Name": "prod-private-app-1"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-0a22c1ab0af104bd7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt6",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-0fdbfadbf2928712e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdbfadbf2928712e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-private-app-2"
            },
            "tags_all": {
              "Name": "prod-private-app-2"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-0fdbfadbf2928712e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt7",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-0ca58559c9a303601",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca58559c9a303601",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-private-db-1"
            },
            "tags_all": {
              "Name": "prod-private-db-1"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-0ca58559c9a303601",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt8",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-07b93cb7f6da423e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b93cb7f6da423e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-private-db-2"
            },
            "tags_all": {
              "Name": "prod-private-db-2"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-07b93cb7f6da423e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-050b44abfde264704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050b44abfde264704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "prod-public-subnet-1"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-050b44abfde264704",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:subnet/subnet-05aa53e75601efcb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05aa53e75601efcb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878915883792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-public-subnet-2"
            },
            "tags_all": {
              "Name": "prod-public-subnet-2"
            },
            "vpc_id": "vpc-0bd1a4de2f75fb098"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "subnet-05aa53e75601efcb5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.three_tier"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878915883792:vpc/vpc-0bd1a4de2f75fb098",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06760b2800f145324",
            "default_route_table_id": "rtb-0c3e988131865f256",
            "default_security_group_id": "sg-0050682b6d9e05859",
            "dhcp_options_id": "dopt-02d203c989a081f26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd1a4de2f75fb098",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3e988131865f256",
            "owner_id": "878915883792",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "878915883792",
            "id": "vpc-0bd1a4de2f75fb098",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}